--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "html-webpack-plugin": "^2.30.1"
   },
   "scripts": {
-    "wstart": "webpack"
+    "webpack": "webpack"
+  },
+  "dependencies": {
+    "webpack": "^3.10.0"
   }
 }
