--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "index.js",
   "author": "DimaGashko",
   "devDependencies": {
-    "html-webpack-plugin": "^2.30.1"
+    "html-webpack-plugin": "^2.30.1",
+    "node-static": "^0.7.10",
+    "webpack": "^3.10.0"
   },
   "scripts": {
-    "webpack": "webpack"
-  },
-  "dependencies": {
-    "webpack": "^3.10.0"
+    "webpack": "webpack --watch",
+    "serv": "static build"
   }
 }
