--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "author": "DimaGashko",
   "devDependencies": {
     "html-webpack-plugin": "^2.30.1",
-    "node-static": "^0.7.10",
     "pug": "^2.0.0-rc.4",
     "pug-loader": "^2.3.0",
-    "webpack": "^3.10.0"
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.1"
   },
   "scripts": {
-    "webpack": "webpack --watch",
-    "serv": "static build"
+    "start": "webpack-dev-server",
+    "build": "webpack"
+  },
+  "dependencies": {
+    "node-static": "^0.7.10"
   }
 }
