--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "pug": "^2.0.0-rc.4",
     "pug-loader": "^2.3.0",
     "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.1"
+    "webpack-dev-server": "^2.11.1",
+    "node-static": "^0.7.10"
   },
   "scripts": {
-    "start": "webpack-dev-server",
-    "build": "webpack"
-  },
-  "dependencies": {
-    "node-static": "^0.7.10"
+    "start": "webpack-dev-server --env delevopment",
+    "build": "webpack --env production",
+    "serv": "static build"
   }
 }
