--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "author": "DimaGashko",
   "devDependencies": {
     "html-webpack-plugin": "^2.30.1",
+    "node-static": "^0.7.10",
     "pug": "^2.0.0-rc.4",
     "pug-loader": "^2.3.0",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1",
-    "node-static": "^0.7.10"
+    "webpack-merge": "^4.1.1"
   },
   "scripts": {
     "start": "webpack-dev-server --env delevopment",
