--- a/package.json
+++ b/package.json
@@ -1,25 +1,15 @@
 {
-  "name": "webpack.learn",
-  "version": "0.0.1",
-  "description": "Webpack.learn",
+  "name": "webpack-lern",
+  "version": "1.0.0",
   "main": "index.js",
-  "author": "DimaGashko",
-  "devDependencies": {
-    "css-loader": "^0.28.9",
-    "html-webpack-plugin": "^2.30.1",
-    "node-sass": "^4.7.2",
-    "node-static": "^0.7.10",
-    "pug": "^2.0.0-rc.4",
-    "pug-loader": "^2.3.0",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.20.1",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.1",
-    "webpack-merge": "^4.1.1"
+  "repository": "https://github.com/DimaGashko/webpack-lern.git",
+  "author": "DimaGashko <dgashko@mail.ua>",
+  "license": "MIT",
+  "dependencies": {
+
   },
-  "scripts": {
-    "start": "webpack-dev-server --env delevopment",
-    "build": "webpack --env production",
-    "serv": "static build"
+  "devDependencies": {
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1"
   }
 }
