--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
    "author": "DimaGashko <dgashko@mail.ua>",
    "license": "MIT",
    "scripts": {
-      "build": "webpack"
+      "build": "webpack",
+      "watch": "webpack --watch"
    },
    "dependencies": {
       "lodash": "^4.17.11"
