--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
    "author": "DimaGashko <dgashko@mail.ua>",
    "license": "MIT",
    "scripts": {
-      "build": "webpack",
-      "watch": "webpack --watch"
+      "watch": "webpack --watch",
+      "start": "webpack-dev-server --open",
+      "build": "webpack"
    },
    "dependencies": {
       "lodash": "^4.17.11"
@@ -20,6 +21,7 @@
       "image-webpack-loader": "^4.6.0",
       "style-loader": "^0.23.1",
       "webpack": "^4.29.0",
-      "webpack-cli": "^3.2.1"
+      "webpack-cli": "^3.2.1",
+      "webpack-dev-server": "^3.1.14"
    }
 }
