--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
    "scripts": {
       "watch": "webpack --watch",
       "start": "webpack-dev-server --open",
+      "server": "node server.js",
       "build": "webpack"
    },
    "dependencies": {
@@ -16,12 +17,14 @@
    "devDependencies": {
       "clean-webpack-plugin": "^1.0.0",
       "css-loader": "^2.1.0",
+      "express": "^4.16.4",
       "file-loader": "^3.0.1",
       "html-webpack-plugin": "^3.2.0",
       "image-webpack-loader": "^4.6.0",
       "style-loader": "^0.23.1",
       "webpack": "^4.29.0",
       "webpack-cli": "^3.2.1",
+      "webpack-dev-middleware": "^3.5.1",
       "webpack-dev-server": "^3.1.14"
    }
 }
