--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
    "author": "DimaGashko <dgashko@mail.ua>",
    "license": "MIT",
    "scripts": {
-      "start": "webpack-dev-server --open --config webpack.dev.js",
+      "start": "webpack-dev-server --open=false --config webpack.dev.js",
       "build": "webpack --config webpack.prod.js"
    },
    "dependencies": {
