--- a/2 authoringALib/package.json
+++ b/2 authoringALib/package.json
@@ -1,6 +1,14 @@
 {
-  "devDependencies": {
-    "lodash": "^4.17.11",
-    "webpack": "^4.29.0"
-  }
+   "main": "dist/webpack-numbers.js",
+   "scripts": {
+      "start": "webpack-dev-server --open=false --config webpack.dev.js",
+      "build": "webpack --config webpack.prod.js"
+   },
+   "dependencies": {
+      "lodash": "^4.17.11"
+   },
+   "devDependencies": {
+      "webpack": "^4.29.0",
+      "webpack-cli": "^3.2.1"
+   }
 }
