--- a/1 base/package.json
+++ b/1 base/package.json
@@ -7,8 +7,8 @@
    "author": "DimaGashko <dgashko@mail.ua>",
    "license": "MIT",
    "scripts": {
-      "start": "webpack-dev-server --open=false --config webpack.dev.js",
-      "build": "webpack --config webpack.prod.js"
+      "start": "webpack-dev-server --open=false --config webpack.config.js",
+      "build": "webpack --config webpack.config.js"
    },
    "dependencies": {
       "lodash": "^4.17.11"
