--- a/2 authoringALib/package.json
+++ b/2 authoringALib/package.json
@@ -1,8 +1,8 @@
 {
    "main": "dist/webpack-numbers.js",
    "scripts": {
-      "start": "webpack-dev-server --open=false --config webpack.dev.js",
-      "build": "webpack --config webpack.prod.js"
+      "start": "webpack-dev-server --open=false --config webpack.config.js",
+      "build": "webpack --config webpack.config.js"
    },
    "dependencies": {
       "lodash": "^4.17.11"
