--- a/1 base/package.json
+++ b/1 base/package.json
@@ -7,8 +7,8 @@
    "author": "DimaGashko <dgashko@mail.ua>",
    "license": "MIT",
    "scripts": {
-      "start": "webpack-dev-server --open=false --config webpack.config.js",
-      "build": "webpack --config webpack.config.js"
+      "start": "webpack-dev-server --open=false --config webpack.dev.js",
+      "build": "webpack --config webpack.prod.js"
    },
    "dependencies": {
       "lodash": "^4.17.11"
@@ -20,6 +20,7 @@
       "file-loader": "^3.0.1",
       "html-webpack-plugin": "^3.2.0",
       "image-webpack-loader": "^4.6.0",
+      "imports-loader": "^0.8.0",
       "style-loader": "^0.23.1",
       "webpack": "^4.29.0",
       "webpack-cli": "^3.2.1",
