--- a/1 base/package.json
+++ b/1 base/package.json
@@ -16,6 +16,7 @@
    "devDependencies": {
       "clean-webpack-plugin": "^1.0.0",
       "css-loader": "^2.1.0",
+      "exports-loader": "^0.7.0",
       "express": "^4.16.4",
       "file-loader": "^3.0.1",
       "html-webpack-plugin": "^3.2.0",
