--- a/1 base/package.json
+++ b/1 base/package.json
@@ -14,6 +14,7 @@
       "lodash": "^4.17.11"
    },
    "devDependencies": {
+      "babel-polyfill": "^6.26.0",
       "clean-webpack-plugin": "^1.0.0",
       "css-loader": "^2.1.0",
       "exports-loader": "^0.7.0",
@@ -27,6 +28,7 @@
       "webpack-cli": "^3.2.1",
       "webpack-dev-middleware": "^3.5.1",
       "webpack-dev-server": "^3.1.14",
-      "webpack-merge": "^4.2.1"
+      "webpack-merge": "^4.2.1",
+      "whatwg-fetch": "^3.0.0"
    }
 }
