--- a/1 base/package.json
+++ b/1 base/package.json
@@ -24,6 +24,8 @@
       "image-webpack-loader": "^4.6.0",
       "imports-loader": "^0.8.0",
       "style-loader": "^0.23.1",
+      "ts-loader": "^5.3.3",
+      "typescript": "^3.2.4",
       "webpack": "^4.29.0",
       "webpack-cli": "^3.2.1",
       "webpack-dev-middleware": "^3.5.1",
