--- a/1 base/package.json
+++ b/1 base/package.json
@@ -14,6 +14,7 @@
       "lodash": "^4.17.11"
    },
    "devDependencies": {
+      "@types/lodash": "^4.14.120",
       "babel-polyfill": "^6.26.0",
       "clean-webpack-plugin": "^1.0.0",
       "css-loader": "^2.1.0",
