--- a/3 By JavaScript.ru/package.json
+++ b/3 By JavaScript.ru/package.json
@@ -1,10 +1,10 @@
 {
    "scripts": {
-      "start": "webpack-dev-server --open=false --config webpack.dev.js",
-      "build": "webpack --config webpack.prod.js"
+      "build": "webpack --config webpack.config.js"
    },
    "devDependencies": {
       "webpack": "^4.29.0",
       "webpack-cli": "^3.2.1"
-   }
+   },
+   "license": "MIT"
 }
