--- a/1 base/package.json
+++ b/1 base/package.json
@@ -7,10 +7,10 @@
    "author": "DimaGashko <dgashko@mail.ua>",
    "license": "MIT",
    "scripts": {
-      "start": "webpack-dev-server --open=false --config webpack.dev.js",
+      "start": "webpack-dev-server --open=true --config webpack.dev.js",
+      "dashboard": "webpack-dashboard -- webpack-dev-server --open=true --config webpack.dev.js",
       "build": "webpack --config webpack.prod.js",
       "stats": "webpack --config webpack.prod.js --json --profile > stats.json"
-
    },
    "dependencies": {
       "lodash": "^4.17.11"
@@ -31,6 +31,7 @@
       "typescript": "^3.2.4",
       "webpack": "^4.29.0",
       "webpack-cli": "^3.2.1",
+      "webpack-dashboard": "^2.0.0",
       "webpack-dev-middleware": "^3.5.1",
       "webpack-dev-server": "^3.1.14",
       "webpack-merge": "^4.2.1",
