--- a/1 base/package.json
+++ b/1 base/package.json
@@ -8,7 +8,6 @@
    "license": "MIT",
    "scripts": {
       "start": "webpack-dev-server --open=true --config webpack.dev.js",
-      "dashboard": "webpack-dashboard -- webpack-dev-server --open=true --config webpack.dev.js",
       "build": "webpack --config webpack.prod.js",
       "stats": "webpack --config webpack.prod.js --json --profile > stats.json"
    },
@@ -23,6 +22,7 @@
       "exports-loader": "^0.7.0",
       "express": "^4.16.4",
       "file-loader": "^3.0.1",
+      "gulp": "^4.0.0",
       "html-webpack-plugin": "^3.2.0",
       "image-webpack-loader": "^4.6.0",
       "imports-loader": "^0.8.0",
