--- a/1 base/package.json
+++ b/1 base/package.json
@@ -16,6 +16,7 @@
    },
    "devDependencies": {
       "@types/lodash": "^4.14.120",
+      "@types/node": "^10.12.18",
       "babel-polyfill": "^6.26.0",
       "clean-webpack-plugin": "^1.0.0",
       "css-loader": "^2.1.0",
